--- a/course-service/course-price/src/main/resources/application.properties
+++ b/course-service/course-price/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:HH:mm:ss.SSS}}){faint} 
 mybatis.configuration.map-underscore-to-camel-case=true
 spring.application.name=course-price
 
-#eureka.client.service-url.defaultZone=http://localhost:8000/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8000/eureka/
 #
 #course-list.ribbon.NFLoadBanlancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 #
