--- a/course-service/course-price/pom.xml
+++ b/course-service/course-price/pom.xml
@@ -49,5 +49,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>course-list</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
