--- a/course-service/course-price/src/main/resources/application.properties
+++ b/course-service/course-price/src/main/resources/application.properties
@@ -8,7 +8,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.application.name=course-price
 
 eureka.client.service-url.defaultZone=http://localhost:8000/eureka/
-#
-#course-list.ribbon.NFLoadBanlancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
-#
-#feign.hystrix.enabled=true
+
+course-list.ribbon.NFLoadBanlancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
+
+feign.hystrix.enabled=true
