--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>course-service</module>
         <module>eureka-server</module>
+        <module>course-zuul</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
